syntax = "proto3";
package doxchain.did.v1beta1;

import "gogoproto/gogo.proto";
import "doxchain/did/v1beta1/did_parameter.proto";

option go_package = "github.com/be-heroes/doxchain/x/did/types";

message Did {  
  string creator = 1;
  string url = 2;
  string methodName = 3;
  string methodId = 4;
  string path = 5;
  string fragment = 6;
  string query = 7;
  repeated DidParameter parameters = 8 [(gogoproto.nullable) = true];
}
